Added Weather Report files

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <!-- ------------------------------------DOM navigation ----------------------------------------------------- -->
-
+<!-- 
     <ul id="fruits">
         <li id="Apple">Apple</li>
         <li id="Orange">Orange</li>
@@ -80,7 +80,58 @@
         <li id="cake">cake</li>
         <li id="pie">pie</li>
         <li id="iceCreme">iceCreme</li>
-    </ul>
+    </ul> -->
+
+
+    <!-- --------------------ADD & CHANGE HTML -DOM ------------------------------------------------------------ -->
+
+        <!-- <div id="box1" class="box">
+            <p>Box 1</p>
+        </div>
+        <div id="box2" class="box">
+            <p>Box 2</p>
+        </div>
+        <div id="box3" class="box">
+            <p>Box 3</p>
+        </div>
+        <div id="box4" class="box">
+            <p>Box 4</p>
+        </div>
+         -->
+
+        <!-- <ol id="fruits">
+            <li id="apple">Apple</li>
+            <li id="apple">Orange</li>
+            <li id="banana">Banana</li>
+            
+        </ol> -->
+
+<!-- ------------------------------ EVENT Listeners---------------------------------------------------------------------- -->
+    <!-- <div id="myBox">
+        Click Me😉
+    </div>
+    <button id="Mybtn">Click Me </button> -->
+
+
+<!-- ---------------------------------HIDE - SHOW IMAGE-------------------------------------- -->
+
+<!-- <button id="myBtn">Hide</button>
+<img id="myImg" src="car.png" width="400px"> -->
+
+<!-- ------------------------------------NODELIST------------------------------------------------------- -->
+<!-- <button class="myButton">Button 1</button>
+<button class="myButton">Button 2</button>
+<button class="myButton">Button 3</button>
+<button class="myButton">Button 4</button> -->
+
+<!-- --------------------------------------CLASSLIST---------------------------------------------------------------- -->
+
+<button id="Mybtn">My Button</button>
+
+
+
+
+
 
     <script  type="module" src="index.js"></script>
     <!-- <script src="Randompassword.js"></script> -->
